replace overflow to prevent mobile horizontal scrolling

--- a/src/style.scss
+++ b/src/style.scss
@@ -333,6 +333,7 @@
 			.wafer-canvas__mirror-background {
 				border-radius: 100%;
 				transform: rotate(45deg);
+				overflow: hidden;
 			}
 		}
 
